<resources>
    <string name="app_name">Androidproject</string>

    <string name="hello_world">Måling af lux</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_evaluation">Evaluation</string>
    <string name="title_activity_create_user">Create_user</string>
    <string name="title_activity_evaluate_item">Item evaluation</string>
    <string name="lbl_point">Points: </string>
    <string name="lbl_note">Note: </string>
    <string name="lbl_lux">Lux: </string>
    <string name="lbl_slope">Hældning: </string>
    <string name="btn_save_item">Gem </string>
    <string name="btn_see_picture">Se billede </string>
    <string name="btn_take_picture">Tag billede </string>
    <string name="btn_measure_lux">Mål lys </string>
    <string name="btn_measure_slope">Mål hældning </string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_lux_reading">LuxReadingActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>