<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_header"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="none"
        android:editable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_point"
        android:text="@string/lbl_point"
        android:layout_below="@+id/txt_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="none" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/point_spinner"
        android:layout_below="@+id/txt_header"
        android:layout_toRightOf="@+id/lbl_point"
        android:layout_toEndOf="@+id/lbl_point" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_note"
        android:text="@string/lbl_note"
        android:inputType="none"
        android:layout_below="@+id/point_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_item"
        android:id="@+id/btn_save"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txt_note"
        android:layout_alignEnd="@+id/txt_note" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_lux"
        android:text="@string/lbl_lux"
        android:layout_below="@+id/lbl_note"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_slope"
        android:text="@string/lbl_slope"
        android:layout_below="@+id/lbl_lux"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txt_note"
        android:layout_below="@+id/lbl_point"
        android:layout_toRightOf="@+id/lbl_point"
        android:layout_above="@+id/lbl_lux"
        android:layout_alignRight="@+id/point_spinner"
        android:layout_alignEnd="@+id/point_spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txt_lux"
        android:layout_alignLeft="@+id/txt_note"
        android:layout_alignStart="@+id/txt_note"
        android:layout_alignBottom="@+id/lbl_lux"
        android:layout_below="@+id/txt_note" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txt_slope"
        android:layout_toEndOf="@+id/lbl_slope"
        android:layout_alignTop="@+id/lbl_slope"
        android:layout_toRightOf="@+id/lbl_slope"
        android:layout_alignBottom="@+id/lbl_slope" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_save"
        android:layout_below="@+id/txt_slope">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_take_picture"
            android:id="@+id/btn_take_picture"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_see_picture"
            android:id="@+id/btn_see_picture"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_measure_lux"
            android:id="@+id/btn_measure_lux"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_measure_slope"
            android:id="@+id/btn_measure_slope"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>